SSL terminator now forwards to Grafana too

--- a/src/main/docker/cert/Dockerfile
+++ b/src/main/docker/cert/Dockerfile
@@ -7,12 +7,14 @@ ARG SERVICE_URL
 ARG SERVICE_DOMAIN
 ARG SERVICE_EMAIL
 ARG TELEMETRY_URL
+ARG GRAFANA_URL
 
 # Define environment variables
 ENV SERVICE_URL ${SERVICE_URL}
 ENV DOMAIN ${SERVICE_DOMAIN}
 ENV EMAIL ${SERVICE_EMAIL}
 ENV TELEMETRY_URL ${TELEMETRY_URL}
+ENV GRAFANA_URL ${GRAFANA_URL}
 
 # Install certbot and openssl
 # Using inotifywait to watch our certificates and trigger actions on change
@@ -25,7 +27,7 @@ RUN apt-get -q -y update && \
 COPY ssl/ /etc/ssl-options
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY cert-nginx.conf /etc/nginx/conf.d/default.conf.template
-RUN envsubst '${DOMAIN}${SERVICE_URL}' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && \
+RUN envsubst '${DOMAIN}${SERVICE_URL}${GRAFANA_URL}' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && \
     rm -f /etc/nginx/conf.d/default.conf.template && \
     rm -f /etc/nginx/sites-enabled/default && \
     mkdir -p /var/cache/nginx/proxycache && \
@@ -56,6 +58,6 @@ RUN chmod a+x entrypoint.sh && \
     chmod a+x request.sh && \
     chmod a+x status.sh
 
-EXPOSE 80 443
+EXPOSE 80 443 8080
 
 ENTRYPOINT ["./entrypoint.sh"]
