--- a/src/main/docker/cert/cert-nginx.conf
+++ b/src/main/docker/cert/cert-nginx.conf
@@ -19,10 +19,35 @@ server {
     client_max_body_size 100M;
     location /.well-known/acme-challenge/ {
         root /var/www/html;
-    }    
+    }
     location / {
-      # proxy to service container
+      # proxy to API container
       proxy_pass $SERVICE_URL;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-Server $host;
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header Host $host;
+      proxy_cache cache;
+      proxy_cache_bypass $cookie_auth_tkt;
+      proxy_no_cache $cookie_auth_tkt;
+      proxy_cache_valid 30m;
+      proxy_cache_key $host$scheme$proxy_host$request_uri;
+    }
+}
+
+server {
+    listen 8080 ssl;
+    server_name $DOMAIN;
+    ssl_certificate /usr/share/nginx/certificates/fullchain.pem;
+    ssl_certificate_key /usr/share/nginx/certificates/privkey.pem;
+    include /etc/ssl-options/options.conf;
+    ssl_dhparam /etc/ssl-options/dhparams.pem;
+    client_max_body_size 100M;
+    location / {
+      # proxy to Grafana container
+      proxy_pass $GRAFANA_URL;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
