--- a/src/main/docker/otelcollector/otelcol-config.yml
+++ b/src/main/docker/otelcollector/otelcol-config.yml
@@ -10,9 +10,7 @@ receivers:
   filelog:
     start_at: beginning
     include:
-      - /usr/logs/data-transfer/*.log
-  docker_stats:
-
+      - /usr/logs/data-transfer/*.log*
 
 exporters:
   otlp:
