--- a/src/main/docker/grafana/grafana.ini
+++ b/src/main/docker/grafana/grafana.ini
@@ -341,7 +341,7 @@ serve_from_sub_path = true
 ;min_refresh_interval = 5s
 
 # Path to the default home dashboard. If this value is empty, then Grafana uses StaticRootPath + "dashboards/home.json"
-;default_home_dashboard_path =
+default_home_dashboard_path = /etc/grafana/provisioning/dashboards/general/data-transfer-dashboard.json
 
 #################################### Users ###############################
 [users]
