--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,7 @@ eosc:
         key-store-password: "password"
   qos:
     percentiles: [ 0.95 ]
-    slos: [ 500, 600, 1000 ] # milliseconds
+    slos: [ 500 ] # SLOs expressed in milliseconds
 
 quarkus:
   application:
@@ -72,7 +72,7 @@ quarkus:
         path: /metrics
     binder:
       http-client:
-        ignore-patterns: .+
+        ignore-patterns: /.+
       http-server:
         ignore-patterns: /metrics
   swagger-ui:
