Added back service port configuration

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -10,7 +10,7 @@ SERVICE_EMAIL=levente.farkas@egi.eu
 # If different from localhost, a SSL certificate will be requested for this domain,
 # so make sure the machine can be reached from the Internet using this hostname
 SERVICE_DOMAIN=localhost
-
+SERVICE_PORT=443
 
 ####################################################################################################
 ## EGI File Transfer                                                                              ##
