Added vi to the SSL terminator container
For easing the editing of request.sh to remove --dry-run certbot option

--- a/src/main/docker/cert/Dockerfile
+++ b/src/main/docker/cert/Dockerfile
@@ -19,7 +19,7 @@ ENV GRAFANA_URL ${GRAFANA_URL}
 # Install certbot and openssl
 # Using inotifywait to watch our certificates and trigger actions on change
 RUN apt-get -q -y update && \
-    apt-get -q -y install inotify-tools openssl certbot gettext-base && \
+    apt-get -q -y install inotify-tools openssl certbot gettext-base vim && \
     apt-get -q clean && \
     rm -rf /var/lib/apt/lists/*
 
