OTEL logs in Nginx proxy enabled

--- a/src/main/docker/cert/telemetry.conf
+++ b/src/main/docker/cert/telemetry.conf
@@ -5,4 +5,4 @@ NginxModuleServiceName ssl-terminator;
 NginxModuleServiceNamespace eosc;
 NginxModuleServiceInstanceId SSLTerminatorId;
 NginxModuleResolveBackends ON;
-#NginxModuleTraceAsError ON;
+NginxModuleTraceAsError ON;
