--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -11,6 +11,8 @@ SERVICE_EMAIL=levente.farkas@egi.eu
 # so make sure the machine can be reached from the Internet using this hostname
 SERVICE_DOMAIN=localhost
 SERVICE_PORT=443
+SERVICE_CORS_ORIGINS=https://${SERVICE_DOMAIN}:${SERVICE_PORT},https://cert
+
 
 ####################################################################################################
 ## EGI File Transfer                                                                              ##
