--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,11 +84,11 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.3
+    info-version: 1.1.22
   jackson:
     fail-on-unknown-properties: false
   http:
     port: 8081
-    cors: false
+    cors: true
   tls:
     trust-all: false
