--- a/src/main/docker/cert/cert-nginx.conf
+++ b/src/main/docker/cert/cert-nginx.conf
@@ -29,7 +29,7 @@ server {
         # and process later
 
         # Enable CORS for allowed (sub)domain
-        if ($http_origin ~* (https?://(.[^?#]*\.)?$DOMAIN(:[0-9]+)?$)) {
+        if ($http_origin ~* (https://(.[^?#]*\.)?$DOMAIN(:[0-9]+)?$)) {
             set $cors 'on';
         }
 
