--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,14 +84,18 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.24
+    info-version: 1.1.25
   jackson:
     fail-on-unknown-properties: false
   http:
     port: 8081
     cors:
-      ~: true
+      ~: false
       origins: /.*/
+    proxy:
+      proxy-address-forwarding: true
+      allow-x-forwarded: true
+      enable-forwarded-host: true
     access-log:
       enabled: true
       pattern: long
