--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,13 +84,13 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.25
+    info-version: 1.1.26
   jackson:
     fail-on-unknown-properties: false
   http:
     port: 8081
     cors:
-      ~: false
+      ~: true
       origins: /.*/
     proxy:
       proxy-address-forwarding: true
