--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,21 +84,20 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.27
+    info-version: 1.1.28
   jackson:
     fail-on-unknown-properties: false
   http:
     port: 8081
     cors:
       ~: true
-      origins: /.*/
     proxy:
       proxy-address-forwarding: true
       allow-x-forwarded: true
       enable-forwarded-host: true
     access-log:
       enabled: true
-      pattern: "%r -> %s\n%{ALL_REQUEST_HEADERS}"
+      pattern: "%r -> %s\n%{ALL_REQUEST_HEADERS}\n"
       log-to-file: true
       base-file-name: data-transfer-http
       log-directory: logs
