CORS now configurable from .env file
Turned off HTTPS access log for the Java app
Fixed SSL terminator not using issued Let's Encrypt cert

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -11,7 +11,12 @@ SERVICE_EMAIL=levente.farkas@egi.eu
 # so make sure the machine can be reached from the Internet using this hostname
 SERVICE_DOMAIN=localhost
 SERVICE_PORT=443
-SERVICE_CORS_ORIGINS=https://${SERVICE_DOMAIN},https://cert
+
+# Provide regular expression with allowed CORS origins as alternatives (separated by |)
+# If not defined, all origins will be allowed
+# CORS_ORIGINS=https://${SERVICE_DOMAIN}
+CORS_METHODS=HEAD,GET,POST,PUT,DELETE,OPTIONS
+CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept
 
 
 ####################################################################################################
