--- a/src/main/docker/cert/cert-nginx.conf
+++ b/src/main/docker/cert/cert-nginx.conf
@@ -24,12 +24,11 @@ server {
         # Proxy to API container
         set $cors '';
 
-        # Nginx doesn't support nested if statements, so we
-        # concatenate compound conditions on the $cors variable
-        # and process later
+        # Nginx doesn't support nested if statements, concatenate compound
+        # conditions on the $cors variable and process later
 
-        # Enable CORS for allowed (sub)domain
-        if ($http_origin ~* (https://(.[^?#]*\.)?$DOMAIN(:[0-9]+)?$)) {
+        # Enable CORS for allowed (sub)domains
+        if ($http_origin ~* ($CORS_ORIGINS)) {
             set $cors 'on';
         }
 
@@ -42,13 +41,12 @@ server {
             add_header Content-Length 0;
             add_header Content-Type 'text/plain';
             add_header Access-Control-Allow-Origin "$http_origin";
-            add_header Access-Control-Allow-Methods 'HEAD,GET,POST,PUT,DELETE,OPTIONS';
-            add_header Access-Control-Allow-Headers 'Origin,X-Requested-With,Content-Type,Accept';
+            add_header Access-Control-Allow-Methods "$CORS_METHODS";
+            add_header Access-Control-Allow-Headers "$CORS_HEADERS";
             return 204;
         }
 
         # Proxy to upstream
-        proxy_redirect off;
         proxy_pass $SERVICE_URL;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -63,8 +61,8 @@ server {
         # Add CORS headers after returning from the upstream
         if ($cors = 'on') {
             add_header Access-Control-Allow-Origin "$http_origin";
-            add_header Access-Control-Allow-Methods 'HEAD,GET,POST,PUT,DELETE,OPTIONS';
-            add_header Access-Control-Allow-Headers 'Origin,X-Requested-With,Content-Type,Accept';
+            add_header Access-Control-Allow-Methods "$CORS_METHODS";
+            add_header Access-Control-Allow-Headers "$CORS_HEADERS";
         }
     }
 }
