Removed CERN trust store password

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,13 +31,13 @@ eosc:
         url: https://fts3-public.cern.ch:8446
         timeout: 5000
         trust-store-file: cern-truststore.jks
-        trust-store-password: "4hFsKWd.839-2h44X"
+        trust-store-password: password
         # Certificate in keystore only used to call FTS endpoint /config/cloud_storage,
         # all other calls to FTS are made with the Check-in token provided by the caller.
         # If keystore is missing, this FTS endpoint will also be called using the caller's
         # Check-in token.
         key-store-file: fts-keystore.jks
-        key-store-password: "password"
+        key-store-password: password
   qos:
     quantiles: [ 0.95 ]
     slos: [ 500 ] # SLOs expressed in milliseconds
