Fixed linter errors

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -26,6 +26,9 @@ CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept
 # Password for (optional) keystore of EGI FTS service
 FTS_KEY_STORE_PASSWORD=password
 
+# Password for CERN truststore
+FTS_TRUST_STORE_PASSWORD=password
+
 
 ####################################################################################################
 ## Telemetry                                                                                      ##
