--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ eosc:
       class: parser.zenodo.ZenodoParser
       url: https://zenodo.org
       timeout: 5000
+    esrf:
+      name: European Synchrotron Radiation Facility
+      class: parser.esrf.EsrfParser
+      url: https://icatplus.esrf.fr
     b2share:
       name: B2Share
       class: parser.b2share.B2ShareParser
@@ -86,7 +90,7 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.40
+    info-version: 1.1.41
   jackson:
     fail-on-unknown-properties: false
   http:
