Added auth headers to allowed HTTP headers list for CORS preflight calls

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -14,9 +14,9 @@ SERVICE_PORT=443
 
 # Provide regular expression with allowed CORS origins as alternatives (separated by |)
 # If not defined, all origins will be allowed
-# CORS_ORIGINS=https://${SERVICE_DOMAIN}
+#CORS_ORIGINS=https:\/\/${SERVICE_DOMAIN}
 CORS_METHODS=HEAD,GET,POST,PUT,DELETE,OPTIONS
-CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept
+CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept,Authorization,Authorization-Storage
 
 
 ####################################################################################################
