Updated API description

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # OpenApi configuration
 mp.openapi.extensions.smallrye.info.title=EOSC Data Transfer API
-mp.openapi.extensions.smallrye.info.description=Backend API that abstracts data transfer services in EOSC Future.
-mp.openapi.extensions.smallrye.info.contact.name=EOSC Future
+mp.openapi.extensions.smallrye.info.description=Universal data transfer service of European Open Science Cloud
+mp.openapi.extensions.smallrye.info.contact.name=EOSC
 mp.openapi.extensions.smallrye.info.contact.url=https://eoscfuture.eu/contact/
 mp.openapi.extensions.smallrye.info.license.name=Apache 2.0
 mp.openapi.extensions.smallrye.info.license.url=http://www.apache.org/licenses/LICENSE-2.0.html
